# blind_assistance

./: model.py  priority_q.cpp
pybind_test/: CMakeLists.txt  bind.cpp  product.cpp
